# dave

examples/dave_demo_launch/launch/: dave_demo.launch
urdf/robots/brov2_description/: CMakeLists.txt  package.xml
urdf/robots/brov2_description/control/config/brov2/: inertial.yaml
urdf/robots/brov2_description/launch/: brov2_demo.launch  upload_brov2.launch
urdf/robots/brov2_description/meshes/: brov2 (ned).dae  brov2.dae  brov2_enu.dae  brov2_prop.dae  brov2_prop_tan_or.dae
urdf/robots/brov2_description/urdf/: brov2.gazebo.xacro  brov2.xacro  brov2_actuators.xacro  brov2_base.xacro  brov2_sensors.xacro
